--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "servidor.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon servidor.js"
+    "start": "node servidor.js",
+    "dev": "nodemon servidor.js"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,6 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.2",
-    "nodemon": "^3.1.10"
+    "mongoose": "^8.18.2"
   }
 }
