Agrega configuración de variables de entorno y Node.js al workflow CI - Crea archivo .env a partir de secrets definidos en GitHub Actions - Mejora la seguridad y facilita pruebas automáticas en CI/CD

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,14 @@ on:
 jobs:
   build-and-test-and-docker:
     runs-on: ubuntu-latest
-
     steps:
       - name: Clonar repositorio
         uses: actions/checkout@v3
+
+      - name: Set environment variables
+        run: |
+          echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" >> .env
+          echo "CLAVE_SECRETA_JWT=${{ secrets.CLAVE_SECRETA_JWT }}" >> .env
 
       - name: Instalar Node.js
         uses: actions/setup-node@v3
